# projeto-polo-sockets

./: .gitignore
client/: pyproject.toml
client/client/: client.py
server/: pyproject.toml
server/server/: server.py
