[tool.poetry]
name = "client"
version = "0.1.0"
description = ""
authors = ["helio-lopes13 <heliosgod13@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.scripts]
client = "client.client:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
